--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								<div class="inner">
 									<h3>昱的校园生活</h3>
 									<p> 大学时期的摄影作品</p>
-									<!-- <a href="https://www.bilibili.com/video/BV1Ge4y1c7cw/?spm_id_from=333.999.0.0" class="button fit" data-poptrox="youtube,800x400">Watch</a> -->
+									<a href="https://www.bilibili.com/video/BV1Ge4y1c7cw/?spm_id_from=333.999.0.0" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
@@ -50,7 +50,7 @@
 								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/CampusView Night.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>建筑</h3>
-									<!-- <a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a> -->
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
@@ -58,18 +58,18 @@
 								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/gogo2.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>宠物</h3>
-									<!-- <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
+									 <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
 									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
-								</div> -->
+								</div> 
 							</div>
 
 							<div class="box">
 								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/travel.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>旅游</h3>
-									<!-- <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
+									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
 									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
-								</div> -->
+								</div>
 							</div>
 
 							<div class="box">
@@ -77,7 +77,7 @@
 								<div class="inner">
 									<h3>记录</h3>
 									<p>日常的点点滴滴</p>
-									<!-- <a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a> -->
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
@@ -85,8 +85,8 @@
 								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/gogo1.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>心得</h3>
-									<!-- <p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a> -->
+									<p>Interdum amet accumsan placerat commodo ut amet aliquam blandit nunc tempor lobortis nunc non. Mi accumsan.</p>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
 								</div>
 							</div>
 
